--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <script>
         document.getElementById('fetchMessage').addEventListener('click', function() {
-            fetch('/api/hello')
+            fetch('http://13.232.16.85/:8080/api/hello')
                 .then(function(response) {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
